# Projeto-Gerenciador-de-Hospital

./: CMakeLists.txt  README.md  biblioteca.c  biblioteca.h  main  main.c
src/: main.c
src/bibliotecas/: biblioteca.c  biblioteca.h
